// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > ProjectTitle renders correctly 1`] = `
<div
  className="ApplicationDockTitle"
>
  <i
    className="fa fa-cube fa-fw "
  />
   
  Mock Project
  <span>
    <span
      className="Tip pull-right"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <a
        name="Delete project"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <i
          className="fa fa-trash fa-fw "
        />
      </a>
    </span>
    <span
      className="Tip pull-right"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <a
        name="Edit project name"
        onClick={[Function]}
        style={Object {}}
        type="button"
      >
        <i
          className="fa fa-gear fa-fw "
        />
      </a>
    </span>
    <span
      className="Tip pull-right"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <a
        name="Import route alignment shapefile"
        onClick={[Function]}
        style={Object {}}
        type="button"
      >
        <i
          className="fa fa-globe fa-fw "
        />
      </a>
    </span>
    <span
      className="Tip pull-right"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <a
        name="Print project"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <i
          className="fa fa-print fa-fw "
        />
      </a>
    </span>
    <span
      className="Tip pull-right"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <a
        name="Export project"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <i
          className="fa fa-upload fa-fw "
        />
      </a>
    </span>
  </span>
</div>
`;

exports[`Component > ProjectTitle should show export select dialogue 1`] = `
<ProjectTitle
  _id="1"
  deleteProject={[Function]}
  downloadScenario={[Function]}
  project={
    Object {
      "_id": "1",
      "accessGroup": "accessGroupName",
      "bundleId": "1",
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "name": "Mock Project",
      "nonce": "12345",
      "regionId": "1",
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
      "variants": Array [
        "Default",
      ],
    }
  }
>
  <Title>
    <div
      className="ApplicationDockTitle"
    >
      <Icon
        type="cube"
      >
        <i
          className="fa fa-cube fa-fw "
        />
      </Icon>
       
      Mock Project
      <span>
        <IconLink
          className="pull-right"
          onClick={[Function]}
          title="Delete project"
          type="trash"
        >
          <Link
            className="pull-right"
            onClick={[Function]}
            title="Delete project"
            type="button"
          >
            <Tip
              className="pull-right"
              tip="Delete project"
            >
              <span
                className="Tip pull-right"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <a
                  name="Delete project"
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <Icon
                    type="trash"
                  >
                    <i
                      className="fa fa-trash fa-fw "
                    />
                  </Icon>
                </a>
              </span>
            </Tip>
          </Link>
        </IconLink>
        <IconLink
          className="pull-right"
          title="Edit project name"
          to="/regions/1/projects/1/edit"
          type="gear"
        >
          <Link
            className="pull-right"
            title="Edit project name"
            to="/regions/1/projects/1/edit"
            type="button"
          >
            <Tip
              className="pull-right"
              tip="Edit project name"
            >
              <span
                className="Tip pull-right"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <Link
                  name="Edit project name"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/regions/1/projects/1/edit"
                  type="button"
                >
                  <a
                    name="Edit project name"
                    onClick={[Function]}
                    style={Object {}}
                    type="button"
                  >
                    <Icon
                      type="gear"
                    >
                      <i
                        className="fa fa-gear fa-fw "
                      />
                    </Icon>
                  </a>
                </Link>
              </span>
            </Tip>
          </Link>
        </IconLink>
        <IconLink
          className="pull-right"
          title="Import route alignment shapefile"
          to="/regions/1/projects/1/import-shapefile"
          type="globe"
        >
          <Link
            className="pull-right"
            title="Import route alignment shapefile"
            to="/regions/1/projects/1/import-shapefile"
            type="button"
          >
            <Tip
              className="pull-right"
              tip="Import route alignment shapefile"
            >
              <span
                className="Tip pull-right"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <Link
                  name="Import route alignment shapefile"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/regions/1/projects/1/import-shapefile"
                  type="button"
                >
                  <a
                    name="Import route alignment shapefile"
                    onClick={[Function]}
                    style={Object {}}
                    type="button"
                  >
                    <Icon
                      type="globe"
                    >
                      <i
                        className="fa fa-globe fa-fw "
                      />
                    </Icon>
                  </a>
                </Link>
              </span>
            </Tip>
          </Link>
        </IconLink>
        <Link
          className="pull-right"
          onClick={[Function]}
          title="Print project"
        >
          <Tip
            className="pull-right"
            tip="Print project"
          >
            <span
              className="Tip pull-right"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <a
                name="Print project"
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <Icon
                  type="print"
                >
                  <i
                    className="fa fa-print fa-fw "
                  />
                </Icon>
              </a>
            </span>
          </Tip>
        </Link>
        <Link
          className="pull-right"
          onClick={[Function]}
          title="Export project"
        >
          <Tip
            className="pull-right"
            tip="Export project"
          >
            <span
              className="Tip pull-right"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <a
                name="Export project"
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <Icon
                  type="upload"
                >
                  <i
                    className="fa fa-upload fa-fw "
                  />
                </Icon>
                <SelectScenario
                  action={[Function]}
                  label="export"
                  onHide={[Function]}
                  scenarios={
                    Array [
                      "Default",
                    ]
                  }
                >
                  <Component
                    onRequestClose={[Function]}
                  >
                    <Modal
                      ariaHideApp={true}
                      bodyOpenClassName="ReactModal__Body--open"
                      className={
                        Object {
                          "base": "CustomModal",
                        }
                      }
                      closeTimeoutMS={0}
                      contentLabel="Modal"
                      isOpen={true}
                      onRequestClose={[Function]}
                      parentSelector={[Function]}
                      portalClassName="ReactModalPortal"
                      shouldCloseOnOverlayClick={true}
                      style={
                        Object {
                          "overlay": Object {
                            "zIndex": 2500,
                          },
                        }
                      }
                    >
                      <noscript />
                    </Modal>
                  </Component>
                </SelectScenario>
              </a>
            </span>
          </Tip>
        </Link>
      </span>
    </div>
  </Title>
</ProjectTitle>
`;

exports[`Component > ProjectTitle should show export select dialogue 2`] = `"<ul><li><a href=\\"\\" tabindex=\\"0\\" target=\\"\\">Default</a></li></ul>"`;

exports[`Component > ProjectTitle should show print select dialogue 1`] = `
<ProjectTitle
  _id="1"
  deleteProject={[Function]}
  downloadScenario={[Function]}
  project={
    Object {
      "_id": "1",
      "accessGroup": "accessGroupName",
      "bundleId": "1",
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "name": "Mock Project",
      "nonce": "12345",
      "regionId": "1",
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
      "variants": Array [
        "Default",
      ],
    }
  }
>
  <Title>
    <div
      className="ApplicationDockTitle"
    >
      <Icon
        type="cube"
      >
        <i
          className="fa fa-cube fa-fw "
        />
      </Icon>
       
      Mock Project
      <span>
        <IconLink
          className="pull-right"
          onClick={[Function]}
          title="Delete project"
          type="trash"
        >
          <Link
            className="pull-right"
            onClick={[Function]}
            title="Delete project"
            type="button"
          >
            <Tip
              className="pull-right"
              tip="Delete project"
            >
              <span
                className="Tip pull-right"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <a
                  name="Delete project"
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <Icon
                    type="trash"
                  >
                    <i
                      className="fa fa-trash fa-fw "
                    />
                  </Icon>
                </a>
              </span>
            </Tip>
          </Link>
        </IconLink>
        <IconLink
          className="pull-right"
          title="Edit project name"
          to="/regions/1/projects/1/edit"
          type="gear"
        >
          <Link
            className="pull-right"
            title="Edit project name"
            to="/regions/1/projects/1/edit"
            type="button"
          >
            <Tip
              className="pull-right"
              tip="Edit project name"
            >
              <span
                className="Tip pull-right"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <Link
                  name="Edit project name"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/regions/1/projects/1/edit"
                  type="button"
                >
                  <a
                    name="Edit project name"
                    onClick={[Function]}
                    style={Object {}}
                    type="button"
                  >
                    <Icon
                      type="gear"
                    >
                      <i
                        className="fa fa-gear fa-fw "
                      />
                    </Icon>
                  </a>
                </Link>
              </span>
            </Tip>
          </Link>
        </IconLink>
        <IconLink
          className="pull-right"
          title="Import route alignment shapefile"
          to="/regions/1/projects/1/import-shapefile"
          type="globe"
        >
          <Link
            className="pull-right"
            title="Import route alignment shapefile"
            to="/regions/1/projects/1/import-shapefile"
            type="button"
          >
            <Tip
              className="pull-right"
              tip="Import route alignment shapefile"
            >
              <span
                className="Tip pull-right"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <Link
                  name="Import route alignment shapefile"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/regions/1/projects/1/import-shapefile"
                  type="button"
                >
                  <a
                    name="Import route alignment shapefile"
                    onClick={[Function]}
                    style={Object {}}
                    type="button"
                  >
                    <Icon
                      type="globe"
                    >
                      <i
                        className="fa fa-globe fa-fw "
                      />
                    </Icon>
                  </a>
                </Link>
              </span>
            </Tip>
          </Link>
        </IconLink>
        <Link
          className="pull-right"
          onClick={[Function]}
          title="Print project"
        >
          <Tip
            className="pull-right"
            tip="Print project"
          >
            <span
              className="Tip pull-right"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <a
                name="Print project"
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <Icon
                  type="print"
                >
                  <i
                    className="fa fa-print fa-fw "
                  />
                </Icon>
                <SelectScenario
                  label="print"
                  onHide={[Function]}
                  projectId="1"
                  regionId="1"
                  scenarios={
                    Array [
                      "Default",
                    ]
                  }
                >
                  <Component
                    onRequestClose={[Function]}
                  >
                    <Modal
                      ariaHideApp={true}
                      bodyOpenClassName="ReactModal__Body--open"
                      className={
                        Object {
                          "base": "CustomModal",
                        }
                      }
                      closeTimeoutMS={0}
                      contentLabel="Modal"
                      isOpen={true}
                      onRequestClose={[Function]}
                      parentSelector={[Function]}
                      portalClassName="ReactModalPortal"
                      shouldCloseOnOverlayClick={true}
                      style={
                        Object {
                          "overlay": Object {
                            "zIndex": 2500,
                          },
                        }
                      }
                    >
                      <noscript />
                    </Modal>
                  </Component>
                </SelectScenario>
              </a>
            </span>
          </Tip>
        </Link>
        <Link
          className="pull-right"
          onClick={[Function]}
          title="Export project"
        >
          <Tip
            className="pull-right"
            tip="Export project"
          >
            <span
              className="Tip pull-right"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <a
                name="Export project"
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <Icon
                  type="upload"
                >
                  <i
                    className="fa fa-upload fa-fw "
                  />
                </Icon>
              </a>
            </span>
          </Tip>
        </Link>
      </span>
    </div>
  </Title>
</ProjectTitle>
`;

exports[`Component > ProjectTitle should show print select dialogue 2`] = `"<ul><li><a href=\\"/reports/1/projects/1/variants/0\\" tabindex=\\"0\\" target=\\"_blank\\">Default</a></li></ul>"`;
